# switchboard-buffer

./: .gitignore  Anchor.toml  README.MD  aggregator.key  aggregator.secret  crank.key  job.key  lease.key  oracle.key  package.json  queue.key  runOracle.ts  server.ts  switchboard.token  user.key
.switchboard/: Anchor.switchboard.toml  docker-compose.switchboard.yml  start-local-validator.sh  switchboard.env  switchboard.json
programs/switchboard-buffer/: Cargo.toml
programs/switchboard-buffer/src/: lib.rs  push_buffer.rs  turn_crank.rs
tests/: common.ts  key  sdk.ts  switchboard-buffer.test.ts  switchboard-buffer.ts
tests/utils/: math.ts
