[package]
name = "switchboard-buffer"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "switchboard_buffer"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"
spl-token = {version="3.3.0"}
switchboard-v2 = { version = "^0.1.14", features = ["devnet"] }
serde_json = { version="1.0" }
anchor-spl = {version="0.25.0"}
nom = {version="7.1.1"}